# RGBAMSC

./: CMakeLists.txt  RGBATests.cpp
include/: RGBA.h
src/: main  main.cpp
tests/: RGBATests.cpp
